<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Devices" Id="{94862fa7-5f8b-4725-b95d-44f5a97a24ca}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL

// Gauges
{attribute 'pytmc' := ' pv: QRIXS:ROUGH:GPI:02 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[EL3174_00_09]^AI Standard Channel 1^Value'}
qRIXS_ROUGH_GPI_02 : FB_MKS275;

{attribute 'pytmc' := ' pv: QRIXS:ROUGH:GPI:11 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[qRIXS_PNL1_E9_EL3174-0002]^AI Standard Channel 1^Value'}
qRIXS_ROUGH_GPI_11 : FB_MKS275;
{attribute 'pytmc' := ' pv: QRIXS:ROUGH:GPI:12 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[qRIXS_PNL1_E7_EL3174-0002]^AI Standard Channel 2^Value'}
qRIXS_ROUGH_GPI_12 : FB_MKS275;
{attribute 'pytmc' := ' pv: QRIXS:ROUGH:GPI:21 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[qRIXS_PNL1_E7_EL3174-0002]^AI Standard Channel 3^Value'}
qRIXS_ROUGH_GPI_21 : FB_MKS275;

// Gauges
//GCC
{attribute 'TcLinkTo' := 	'    .i_iPRESS_R		:=	TIIB[EL3174-0002_01_23]^AI Standard Channel 1^Value;
                                 .i_xHV_ON			:=	TIIB[EL1124_01_22]^Channel 1^Input;
                                 .i_xDisc_Active	:=	TIIB[EL1124_01_22]^Channel 2^Input;
                                 .q_xHV_DIS			:=	TIIB[EL2624_01_18]^Channel 1^Output
    '}
    {attribute 'pytmc' := '
        pv: QRIXS:SC:GCC:01 '}
qRIXS_SC_GCC_01: FB_MKS500;
//GPI
{attribute 'pytmc' := ' pv: QRIXS:SC:GPI:01 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[EL3174-0002_01_23]^AI Standard Channel 2^Value'}
qRIXS_SC_GPI_01 : FB_MKS275;
{attribute 'pytmc' := ' pv: QRIXS:ROUGH:GPI:31 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[EL3174-0002_01_23]^AI Standard Channel 3^Value'}
qRIXS_ROUGH_GPI_31 : FB_MKS275;

(* MKS972 - Full range guage *)
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=		TIIB[EL3174-0002_02_13]^AI Standard Channel 2^Value'}
{attribute 'pytmc' := '
    pv: QRIXS:SA:GCP:02
    io: io
'}
qRIXS_SA_GCP_02: FB_972;

{attribute 'pytmc' := '
    pv: QRIXS:SSL:GCP:20
    io: io
'}
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[EL3174-0002_01_24]^AI Standard Channel 1^Value'}
qRIXS_SSL_GCP_20: FB_972;

{attribute 'pytmc' := '
    pv: QRIXS:SSL:GCP:30
    io: io
'}
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[EL3174-0002_01_24]^AI Standard Channel 2^Value'}
qRIXS_SSL_GCP_30: FB_972;

{attribute 'pytmc' := ' pv: QRIXS:SDS:GCP:01 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[EL3174-0002_02_13]^AI Standard Channel 1^Value'}
qRIXS_SDS_GCP_01 : FB_972;

//MKS-275

{attribute 'pytmc' := ' pv: QRIXS:ROUGH:GPI:04 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[EL3174-0002_02_13]^AI Standard Channel 3^Value'}
qRIXS_ROUGH_GPI_04 : FB_MKS275;




//Valves
{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[EL1004_00_12]^Channel 1^Input;
                             .i_xClsLS	:=	TIIB[EL1004_00_12]^Channel 2^Input;
                             .q_xOPN_DO	:=	TIIB[EL2004_00_13]^Channel 1^Output
    '}
{attribute 'pytmc' := '
        pv: QRIXS:ROUGH:VRC:01
        io: io
    '}
qRIXS_ROUGH_VRC_01: FB_VRC;
{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[EL1004_00_12]^Channel 3^Input;
                             .i_xClsLS	:=	TIIB[EL1004_00_12]^Channel 4^Input;
                             .q_xOPN_DO	:=	TIIB[EL2004_00_13]^Channel 2^Output
    '}
{attribute 'pytmc' := '
        pv: QRIXS:ROUGH:VRC:02
        io: io
    '}
qRIXS_ROUGH_VRC_02: FB_VRC;
(*{attribute 'pytmc' := '
    pv: QRIXS:SA:VRC:01
'}
qRIXS_SA_VRC_01 : FB_VRC_NO_FFO; // Is the Window valve NO
*)
(* MOved to PAX
//// Connected to B950-310-WALL-W-DRL-02 (Mechanical Room )
{attribute 'pytmc' := ' pv: QRIXS:PRO:01 '}
{attribute 'TcLinkTo' := '.q_xMPStart := TIIB[EL2794_03_03]^Channel 1^Output;
                          .q_xBPStart := TIIB[EL2794_03_03]^Channel 2^Output;
                          .i_xMPStatus := TIIB[EL1088_03_01]^Channel 1^Input;
                          .i_xBPStatus := TIIB[EL1088_03_01]^Channel 2^Input;
                          .i_xWarning := TIIB[EL1088_03_01]^Channel 3^Input;
                          .i_xAlarmOK := TIIB[EL1088_03_01]^Channel 4^Input;
                          .i_xRemote := TIIB (EL1088_03_01]^Channel 5^Input
'}
qRIXS_PRO_01 : FB_EbaraDryPump;
{attribute 'pytmc' := ' pv: QRIXS:ROUGH:GPI:01 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[EL3174-0002_03_07]^AI Standard Channel 4^Value'}
qRIXS_ROUGH_GPI_01 : FB_MKS275;

//VRO
{attribute 'pytmc' := ' pv: QRIXS:ROUGH:VRO:01 '}
{attribute 'TcLinkTo' := 	'.q_xOPN_DO	:=	TIIB[EL2212_03_04]^DOX Control Channel 1^Control^Output'}
QRIX_ROUGH_VRO_01 : FB_VVC;
*)

qRIXS_ROUGH_GPI_01:FB_TGPI_ADS;
qRIXS_PRO_01:FB_PRO_ADS;

//VRC
{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[EL1004_01_01]^Channel 1^Input;
                            .i_xClsLS	:=	TIIB[EL1004_01_01]^Channel 2^Input;
                            .q_xOPN_DO	:=	TIIB[EL2004_01_02]^Channel 1^Output
'}
{attribute 'pytmc' := ' pv: QRIXS:SC:VRC:10 '}
qRIXS_SC_VRC_10 : FB_VRC;

{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[EL1004_01_01]^Channel 3^Input;
                            .i_xClsLS	:=	TIIB[EL1004_01_01]^Channel 4^Input;
                            .q_xOPN_DO	:=	TIIB[EL2004_01_02]^Channel 2^Output
'}
{attribute 'pytmc' := ' pv: QRIXS:SC:VRC:20 '}
qRIXS_SC_VRC_20 : FB_VRC;
{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[EL1004_01_03]^Channel 1^Input;
                            .i_xClsLS	:=	TIIB[EL1004_01_03]^Channel 2^Input;
                            .q_xOPN_DO	:=	TIIB[EL2004_01_04]^Channel 4^Output
'}
{attribute 'pytmc' := ' pv: QRIX:SC:VRC:30 '}
qRIXS_SC_VRC_30 : FB_VRC;

//VGC
{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[EL1004_01_07]^Channel 3^Input;
                             .i_xClsLS	:=	TIIB[EL1004_01_07]^Channel 4^Input;
                             .q_xOPN_DO	:=	TIIB[EL2004_01_08]^Channel 1^Output
    '}
{attribute 'pytmc' := '
        pv: QRIX:SC:VGC:01
        io: io
    '}
qRIXS_SC_VGC_01 : FB_VGC;
{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[EL1004_01_09]^Channel 3^Input;
                             .i_xClsLS	:=	TIIB[EL1004_01_09]^Channel 4^Input;
                             .q_xOPN_DO	:=	TIIB[EL2004_01_08]^Channel 2^Output
    '}
{attribute 'pytmc' := '
        pv: QRIX:SC:VGC:02
        io: io
    '}
qRIXS_SC_VGC_02 : FB_VGC;
{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[EL1004_01_03]^Channel 3^Input;
                             .i_xClsLS	:=	TIIB[EL1004_01_03]^Channel 4^Input;
                             .q_xOPN_DO	:=	TIIB[EL2004_01_02]^Channel 4^Output;
                             .q_xCls_DO	:=	TIIB[EL2004_01_10]^Channel 1^Output
    '}
{attribute 'pytmc' := '
        pv: QRIX:SC:VGC:03
        io: io
    '}
qRIXS_SC_VGC_03 : FB_VRC_DA;

{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[EL1004_01_05]^Channel 1^Input;
                             .i_xClsLS	:=	TIIB[EL1004_01_05]^Channel 2^Input;
                             .q_xOPN_DO	:=	TIIB[EL2004_01_04]^Channel 1^Output
    '}
{attribute 'pytmc' := ' pv: QRIXS:SC:VGC:04 '}
qRIXS_SC_VGC_04 : FB_VGC;
{attribute 'pytmc' := ' pv: QRIXS:SC:VGC:05 '}
{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[EL1004_01_05]^Channel 3^Input;
                             .i_xClsLS	:=	TIIB[EL1004_01_05]^Channel 4^Input;
                             .q_xCLS_DO	:=	TIIB[EL2004_01_04]^Channel 2^Output
    '}
qRIXS_SC_VGC_05 : FB_VRC_NO; // AL foil valve

//PTM
{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[EL1004_01_13]^Channel 1^Input;
                             .i_xFaultNC		:=	TIIB[EL1004_01_13]^Channel 3^Input;
                             .i_xRemote			:=	TIIB[EL1004_01_13]^Channel 2^Input;
                             .q_RunDO			:=	TIIB[EL2004_01_12]^Channel 1^Output;
                             .q_xRemote			:=	TIIB[EL2004_01_12]^Channel 2^Output;
                             .q_PumpingStation	:=	TIIB[EL2004_01_12]^Channel 3^Output;
'}


//VRC
{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[EL1004_02_01]^Channel 1^Input;
                            .i_xClsLS	:=	TIIB[EL1004_02_01]^Channel 2^Input;
                            .q_xCLS_DO	:=	TIIB[EL2004_02_02]^Channel 1^Output
'}
{attribute 'pytmc' := ' pv: QRIXS:SDS:VRC:01 '}
qRIXS_SDS_VRC_01 : FB_VRC;
//VVC
{attribute 'pytmc' := ' pv: QRIXS:SDS:VVC:01 '}
qRIXS_SDS_VVC_01 : FB_VVC;
{attribute 'pytmc' := ' pv: QRIXS:SDS:VVC:02 '}
qRIXS_SDS_VVC_02 : FB_VVC;






//VRC

{attribute 'pytmc' := '
        pv: QRIXS:SC:VRC:01
        io: io
    '}
qRIXS_SC_VRC_01: FB_VRC;


{attribute 'pytmc' := '
        pv: QRIXS:SDS:VRC:31
        io: io
    '}
qRIXS_SDS_VRC_31: FB_VRC;



//Turbo Pumps
{attribute 'pytmc' := '
        pv: QRIXS:SC:PTM:10
        io: io
'}
{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[EL1004_01_13]^Channel 1^Input;
                             .i_xRemote		    :=	TIIB[EL1004_01_13]^Channel 2^Input;
                             .i_xFaultNC		:=	TIIB[EL1004_01_13]^Channel 3^Input;
                             .q_RunDO			:=	TIIB[EL2004_01_12]^Channel 1^Output;
                             .q_xRemote			:=	TIIB[EL2004_01_12]^Channel 2^Output;
                            .q_PumpingStation	:=	TIIB[EL2004_01_12]^Channel 3^Output
'}
qRIXS_SC_PTM_10 : FB_PTM_Pfeiffer;
{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[EL1004_01_16]^Channel 2^Input;
                             .i_xFaultNC		:=	TIIB[EL1004_01_16]^Channel 1^Input;
                             .q_RunDO			:=	TIIB[EL2794_01_15]^Channel 1^Output;
                             .q_xReset			:=	TIIB[EL2794_01_15]^Channel 2^Output
'}
{attribute 'pytmc' := '
        pv: QRIXS:SC:PTM:20
        io: io
'}
qRIXS_SC_PTM_20 : FB_PTM_Pfeiffer;
{attribute 'pytmc' := '
        pv: QRIXS:SC:PTM:30
        io: io
'}
{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[EL1004_01_16]^Channel 4^Input;
                             .i_xFaultNC		:=	TIIB[EL1004_01_16]^Channel 3^Input;
                             .q_RunDO			:=	TIIB[EL2794_01_15]^Channel 3^Output;
                             .q_xReset			:=	TIIB[EL2794_01_15]^Channel 4^Output
'}
qRIXS_SC_PTM_30 : FB_PTM_Pfeiffer;
//PTM- Turbo Pump
{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[EL1004_02_08]^Channel 2^Input;
                             .i_xFaultNC		:=	TIIB[EL1004_02_08]^Channel 1^Input;
                             .q_RunDO			:=	TIIB[EL2794_02_09]^Channel 1^Output;
                             .q_xReset			:=	TIIB[EL2794_02_09]^Channel 2^Output
'}
{attribute 'pytmc' := '
        pv: QRIXS:SDS:PTM:10
        io: io
'}
qRIXS_SDS_PTM_10 : FB_PTM_Pfeiffer;





//Ion Pump Controller
{attribute 'pytmc' := '
    pv: QRIXS:SC:PIP:01
    io: io
'}
{attribute 'TcLinkTo' := 	'.q_xHVEna_DO	:=	TIIB[EL2794_00_04]^Channel 1^Output;
                             .i_iPRESS		:=	TIIB[EL3064_00_03]^AI Standard Channel 1^Value;
                             .i_xSP_DI		:=	TIIB[EL1004_00_05]^Channel 1^Input
'}
qRIXS_SC_PIP_01: FB_PIP_Gamma;
{attribute 'pytmc' := '
    pv: QRIXS:SC:PIP:02
    io: io
'}
{attribute 'TcLinkTo' := 	'.q_xHVEna_DO	:=	TIIB[EL2794_00_04]^Channel 2^Output;
                             .i_iPRESS		:=	TIIB[EL3064_00_03]^AI Standard Channel 2^Value;
                             .i_xSP_DI		:=	TIIB[EL1004_00_05]^Channel 2^Input
'}
qRIXS_SC_PIP_02: FB_PIP_Gamma;

{attribute 'pytmc' := '
    pv: QRIXS:OPT:PIP:01
    io: io
'}
{attribute 'TcLinkTo' := 	'.q_xHVEna_DO	:=	TIIB[EL2794_00_04]^Channel 3^Output;
                             .i_iPRESS		:=	TIIB[EL3064_00_03]^AI Standard Channel 3^Value;
                             .i_xSP_DI		:=	TIIB[EL1004_00_05]^Channel 3^Input
'}

qRIXS_OPT_PIP_01: FB_PIP_Gamma;

{attribute 'pytmc' := '
    pv: QRIXS:DET:PIP:01
    io: io
'}
{attribute 'TcLinkTo' := 	'.q_xHVEna_DO	:=	TIIB[EL2794_00_04]^Channel 4^Output;
                             .i_iPRESS		:=	TIIB[EL3064_00_03]^AI Standard Channel 4^Value;
                             .i_xSP_DI		:=	TIIB[EL1004_00_05]^Channel 4^Input
'}
qRIXS_DET_PIP_01: FB_PIP_Gamma;


{attribute 'pytmc' := '
    pv: QRIXS:CRYO:PIP:01
    io: io
'}
{attribute 'TcLinkTo' := 	'.q_xHVEna_DO	:=	TIIB[EL2794_00_07]^Channel 3^Output;
                             .i_iPRESS		:=	TIIB[EL3064_00_06]^AI Standard Channel 3^Value;
                             .i_xSP_DI		:=	TIIB[EL1004_00_08]^Channel 3^Input
'}

qRIXS_CRYO_PIP_01: FB_PIP_Gamma;

{attribute 'pytmc' := '
    pv: QRIXS:DET:PIP:03
    io: io
'}
{attribute 'TcLinkTo' := 	'.q_xHVEna_DO	:=	TIIB[EL2794_00_07]^Channel 4^Output;
                             .i_iPRESS		:=	TIIB[EL3064_00_06]^AI Standard Channel 4^Value;
                             .i_xSP_DI		:=	TIIB[EL1004_00_08]^Channel 4^Input
'}
qRIXS_DET_PIP_03: FB_PIP_Gamma;



END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>