<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_SA" Id="{bb04b4b3-d6fa-402c-9d84-a120445e7630}">
    <Declaration><![CDATA[VAR_GLOBAL	
/// Detector Chamber, Optics Tank & Spectrometer Arm
//VGC

	(* -- Normally Closed Valve with Readback -- *)
	{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[qRIXS_PNL1_E1_EL1004]^Channel 1^Input;
								 .i_xClsLS	:=	TIIB[qRIXS_PNL1_E1_EL1004]^Channel 2^Input;
								 .q_xOPN_DO	:=	TIIB[qRIXS_PNL1_E3_EL2004]^Channel 1^Output
	'}
	{attribute 'pytmc' := '
		pv: QRIXS:OPT:VGC:01
		io: io
	'}
	qRIXS_OPT_VGC_01: FB_VGC;
		
	{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[qRIXS_PNL1_E1_EL1004]^Channel 3^Input;
								 .i_xClsLS	:=	TIIB[qRIXS_PNL1_E1_EL1004]^Channel 4^Input;
								 .q_xOPN_DO	:=	TIIB[qRIXS_PNL1_E3_EL2004]^Channel 2^Output
	'}
	{attribute 'pytmc' := '
		pv: QRIXS:BLW:VRC:01
		io: io
	'}
	qRIXS_BLW_VRC_01: FB_VRC;
	
	{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[qRIXS_PNL1_E2_EL1004]^Channel 1^Input;
								 .i_xClsLS	:=	TIIB[qRIXS_PNL1_E2_EL1004]^Channel 2^Input;
								 .q_xOPN_DO	:=	TIIB[qRIXS_PNL1_E3_EL2004]^Channel 3^Output
	'}
	{attribute 'pytmc' := '
		pv: QRIXS:DET:VRC:01
		io: io
	'}
	qRIXS_DET_VRC_01: FB_VRC;
	
//GUAGES
(* MKS275 - Pirani *)
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[qRIXS_PNL1_E5_EL3174-0002]^AI Standard Channel 1^Value'}
	{attribute 'pytmc' := '
		pv: QRIXS:OPT:GPI:01
		io: io
	'}
	qRIXS_OPT_GPI_01: FB_MKS275;
		
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[qRIXS_PNL1_E5_EL3174-0002]^AI Standard Channel 2^Value'}
{attribute 'pytmc' := '
	pv: QRIXS:DET:GPI:01
	io: io
'}
qRIXS_DET_GPI_01: FB_MKS275;
	
	
	(* MKS972 - Full range guage *)
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[qRIXS_PNL1_E5_EL3174-0002]^AI Standard Channel 3^Value'}
	{attribute 'pytmc' := '
		pv: QRIXS:BLW:GFR:01
		io: io
	'}
	qRIXS_BLW_GFR_01: FB_972;
	
// MKS500 - Cold cathode gauge 
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R		:=	TIIB[qRIXS_PNL1_E6_EL3174-0002]^AI Standard Channel 1^Value;
								 .i_xHV_ON			:=	TIIB[qRIXS_PNL1_E8_EL1124]^Channel 1^Input;
								 .i_xDisc_Active	:=	TIIB[qRIXS_PNL1_E8_EL1124]^Channel 2^Input;
								 .q_xHV_DIS			:=	TIIB[qRIXS_PNL1_E4_EL2624]^Channel 1^Output
	'}
	{attribute 'pytmc' := '
		pv: QRIXS:DET:GCC:01
		io: io
	'}
	qRIXS_DET_GCC_01: FB_MKS500;
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R		:=	TIIB[qRIXS_PNL1_E6_EL3174-0002]^AI Standard Channel 1^Value;
								 .i_xHV_ON			:=	TIIB[qRIXS_PNL1_E8_EL1124]^Channel 1^Input;
								 .i_xDisc_Active	:=	TIIB[qRIXS_PNL1_E8_EL1124]^Channel 2^Input;
								 .q_xHV_DIS			:=	TIIB[qRIXS_PNL1_E4_EL2624]^Channel 1^Output
	'}
	{attribute 'pytmc' := '
		pv: QRIXS:OPT:GCC:01
		io: io
	'}
	qRIXS_OPT_GCC_01: FB_MKS500;	
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R		:=	TIIB[qRIXS_PNL1_E6_EL3174-0002]^AI Standard Channel 2^Value;
								 .i_xHV_ON			:=	TIIB[qRIXS_PNL1_E8_EL1124]^Channel 3^Input;
								 .i_xDisc_Active	:=	TIIB[qRIXS_PNL1_E8_EL1124]^Channel 4^Input;
								 .q_xHV_DIS			:=	TIIB[qRIXS_PNL1_E4_EL2624]^Channel 2^Output
	'}
	{attribute 'pytmc' := '
		pv: QRIXS:SA:GCC:01
		io: io
	'}
	qRIXS_SA_GCC_01: FB_MKS500;
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R		:=	TIIB[qRIXS_PNL1_E6_EL3174-0002]^AI Standard Channel 2^Value;
								 .i_xHV_ON			:=	TIIB[qRIXS_PNL1_E8_EL1124]^Channel 3^Input;
								 .i_xDisc_Active	:=	TIIB[qRIXS_PNL1_E8_EL1124]^Channel 4^Input;
								 .q_xHV_DIS			:=	TIIB[qRIXS_PNL1_E4_EL2624]^Channel 2^Output
	'}
	{attribute 'pytmc' := '
		pv: QRIXS:SA:GCC:02
		io: io
	'}
	qRIXS_SA_GCC_02: FB_MKS500;
	
	
	
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>