<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_SPA" Id="{e7638e88-1503-4577-9ef9-851b12b29e9b}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_SPA
VAR
    xExtILK_OK_OPT : BOOL := True;
    xExtILK_OK_BLW : BOOL;
    xExtILK_OK_DET : BOOL;
    iPressTorrerance : REAL := 1.0; // Torr
    stUSG_dummy : ST_VG;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
(* Gamma Ion Pump *)
    qRIXS_OPT_PIP_01(i_stGauge:=qRIXS_OPT_GCC_01.IG, i_xOverrideMode:= xSystemOverrideMode);
    qRIXS_DET_PIP_01(i_stGauge:=qRIXS_DET_GPI_01.PG, i_xOverrideMode:= xSystemOverrideMode);
	qRIXS_DET_PIP_03(i_stGauge:=qRIXS_DET_GPI_01.PG, i_xOverrideMode:= xSystemOverrideMode);

(* Pirani MKS 275 Gauges *)
    qRIXS_OPT_GPI_01(PG=>);
    qRIXS_DET_GPI_01(PG=>);

(* Full Range Gauges *)
    qRIXS_SA_GCP_01(PG=>);

(* Cold Cathode Gauges *)
    qRIXS_OPT_GCC_01.M_SetBits(30518);
    qRIXS_OPT_GCC_01(PG:=qRIXS_OPT_GPI_01.PG, IG=>, bEP:=TRUE);
    qRIXS_DET_GCC_01.M_SetBits(30518);
    qRIXS_DET_GCC_01(PG:=qRIXS_DET_GPI_01.PG, IG=>, bEP:=TRUE);

(* Normally Closed Vate Valve *)
    qRIXS_OPT_VGC_01(
        i_stUSG := qRIXS_SA_GCP_02.PG,
        i_stDSG := qRIXS_OPT_GCC_01.IG,
        i_xExt_OK := xExtILK_OK_OPT,
        i_xPMPS_OK:= TRUE ,
        i_xOverrideMode:=xSystemOverrideMode,
        io_fbFFHWO := GVL_PMPS.fbFastFaultOutput2,
        fbArbiter := GVL_PMPS.fbArbiter2,
        iq_stValve =>,
    );


// Calc pressure Difference

qRIXS_SA_VWC_01(
    i_stUSG:= qRIXS_SA_GCP_01.PG ,
    i_stDSG:= qRIXS_OPT_GCC_01.IG ,
    i_xDis_DPIlk:= FALSE ,
    i_xPMPS_OK:= TRUE ,
    i_xEPS_OK:= ,
    i_xExt_OK:= TRUE ,
    i_xOverrideMode:= ,
    i_xReset:= ,
    i_xIsAperture:= TRUE,
    i_sDevName:= ,
    i_nTransitionRootID:= ,
    iq_stValve=> ,
    xMPS_OK=> ,
    io_fbFFHWO:=GVL_PMPS.fbFastFaultOutput2 ,
    fbArbiter:= GVL_PMPS.fbArbiter2
    );


qRIXS_DET_VGC_01(
        i_stUSG := qRIXS_SA_GCP_01.PG,
        i_stDSG := qRIXS_DET_PIP_01.q_IG,
        i_xExt_OK := xExtILK_OK_OPT,
        i_xPMPS_OK:= TRUE ,
        i_xOverrideMode:=xSystemOverrideMode,
        io_fbFFHWO := GVL_PMPS.fbFastFaultOutput2,
        fbArbiter := GVL_PMPS.fbArbiter2,
        iq_stValve =>,
 );



]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>